--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "./node_modules/.bin/gulp build",
     "build": "./node_modules/.bin/gulp build",
     "dev": "npm run build -s && ./node_modules/.bin/gulp watch",
-    "start": "node server.js",
+    "start": "npm run build -s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
