--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "adpure-chrome-extension",
+  "name": "pagediff-chrome-extension",
   "version": "0.0.1",
   "description": "A Chrome Extension for Adpure",
   "main": "index.js",
   "scripts": {
     "postinstall": "./node_modules/.bin/gulp build",
     "build": "./node_modules/.bin/gulp build",
-    "dev": "npm run build -s && ./node_modules/.bin/gulp watch",
+    "dev": "npm run build -s && ./node_modules/.bin/gulp",
     "start": "npm run build -s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,15 +16,16 @@
     "browserify": "^12.0.1",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
     "gulp-livereload": "^3.8.0",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "lodash.assign": "^3.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-ng-html2js": "^0.2.0"
+    "watchify": "^3.6.1"
   },
   "dependencies": {
     "angular": "^1.4.7",
